--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ches3/annict-search",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"description": "AnnictのAPIを使って作品の検索と記録をするライブラリ",
 	"author": "ches3",
 	"license": "MIT",
@@ -19,7 +19,9 @@
 			"require": "./dist/index.cjs"
 		}
 	},
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"build": "tsup",
 		"test": "vitest",
