リリース用のGitHub Actionを修正 Fixes #21

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,9 +66,7 @@ jobs:
 
       - name: Create pull request & merge
         run: |
-          git add package.json
-          git commit -m $AFTER_VERSION
-          git push origin release-${AFTER_VERSION}
+          git push origin release-${AFTER_VERSION} --follow-tags
           gh pr create --title "Bump version to ${AFTER_VERSION}" --body "" --base main --head release-${AFTER_VERSION}
           gh pr merge release-${AFTER_VERSION} --auto --merge --delete-branch
         env:
@@ -83,4 +81,4 @@ jobs:
       - name: Publish to npm
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
